# stxml

./: README.md  pyproject.toml  validate.yml
.github/workflows/: validate.yml
schema/: stgpx-schema-1.0.xsd
test/: combined.xsd  extension.xsd  test_schema.py  validator.py
test/data/: maximal-with-ws.xml
